--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/axios": "^0.14.0",
     "@types/node": "^20.14.7",
     "axios": "^1.7.2",
+    "framer-motion": "^12.23.26",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
